--- a/android/.gitignore
+++ b/android/.gitignore
@@ -8,7 +8,8 @@ GeneratedPluginRegistrant.java
 .cxx/
 
 # Remember to never publicly share your keystore.
-# See https://flutter.dev/to/reference-keystore
+# See https://flutter.dev/to/reference/security-false-positives
 key.properties
 **/*.keystore
 **/*.jks
+upload-keystore.jks
