--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   state_notifier: ^1.0.0
   jwt_decoder: ^2.0.1
   fl_chart: ^1.1.1
+  url_launcher: ^6.3.2
+  animated_text_kit: ^4.3.0
 
 dev_dependencies:
   flutter_test:
